--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -7,20 +7,6 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <script src="js/generic.js"></script>
   <script src="js/globals.js"></script>
-  <script>
-  function goFS() {
-    if (document.mozFullScreenEnabled) {
-     var elFS = document.getElementById("elFS");
-       elFS.mozRequestFullScreen();
-    }
-  };
-  document.addEventListener("mozfullscreenchange", function(evnt) {
-    if ( document.mozFullScreen ) {
-      dom.fsLeak = screen.width+" x "+screen.height;
-      document.mozCancelFullScreen();
-    }
-  });
-  </script>
 </head>
 
 <body>
@@ -63,7 +49,7 @@
     <tr><td>full screen</td><td id="fsState"></td></tr>
     <tr><td>[api] full screen</td><td id="fsSupport"></td></tr>
     <tr><td><button class="btn0" onClick="goFS()">[ click here ]</button>[test] full screen <sup>3</sup></td><td id="fsLeak"></td></tr>
-    <tr><td><button class="btn0" onClick="">[ click here ]</button>new window</td><td id="newWinLeak"></td></tr>
+    <tr><td><button class="btn0" onClick="goNW()">[ click here ]</button>new window</td><td id="newWinLeak"></td></tr>
     <tr><td>private window</td><td id="IsPBMode"></td></tr>
     <tr><td>orientation</td><td id="ScrOrient"></td></tr>
     <tr><td>[matchMedia] window orientation</td><td id="mmOrient"></td></tr>
