save some bytes

--- a/iframes/widgets.html
+++ b/iframes/widgets.html
@@ -1,41 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
 <head>
-<style>
-.normalize {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 12px;
-  font-weight: normal;
-  font-style: normal;
-  line-height: normal;
-  text-transform: none;
-  text-align: left;
-  text-decoration: none;
-  text-shadow: none;
-  white-space: normal;
-  word-break: normal;
-  word-spacing: normal;
-}
-</style>
 </head>
 <body>
-  <h2>widgets</h2>
-  button <input type="reset" value="" id="widget1"><br>
-  checkbox <input type="checkbox" id="widget2"><br>
-  color <input type="color" id="widget3"><br>
-  combobox <select id="widget4"><option value="a"></option><option value="b"></option></select><br>
-  datetime-local <input type="datetime-local" id="widget5"><br>
-  radio <input type="radio" id="widget6"><br>
-  text <input type="text" id="widget7"><br>
-  datetime <input type="date" id="widget8"><br>
-  textarea <textarea id="widget9"></textarea><br>
-  <h2>elements</h2>
-  <div class="normalize">
-    progress bar <progress id="elem1"></progress><br>
-    iframe <iframe id="elem2"></iframe><br>
-    image <img src="nothing.jpg" id="elem3"></img>
-  </div>
+<input type="reset" value="" id="widget1"><br>
+<input type="checkbox" id="widget2"><br>
+<input type="color" id="widget3"><br>
+<select id="widget4"><option value="a"></option></select><br>
+<input type="datetime-local" id="widget5"><br>
+<input type="radio" id="widget6"><br>
+<input type="text" id="widget7"><br>
+<input type="date" id="widget8"><br>
+<textarea id="widget9"></textarea><br>
 </body>
 </html>
