fixup DTD locale tip

--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -223,7 +223,7 @@
     <tr><td>[Intl.PluralRules] locale</td><td id="localeIPR"></td></tr>
     <tr><td>[resolvedOptions] locale</td><td id="localeRO"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">[ i ]</span>
-      <span class="tooltiptext">an error message using<br>your application locale</span></div>
+      <span class="tooltiptextbig">test if the error message<br>uses your application locale</span></div>
       &nbsp [test] DTD locale</td><td id="localeDTD"></td></tr>
     <tr><td>timezone offsets</td><td id="tzOffsets"></td></tr>
     <tr><td>[resolvedOptions] timezone</td><td id="tzRO"></td></tr>
