--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -365,20 +365,20 @@
         <div class="nav-down"><a href="#domrect">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td><div>
-        <div class="btn-left"><button class="btn8" onClick="runCanvas(`rerun`)">[ re-run tests ]</button></div>
+        <div class="btn-left"><button class="btn8" onClick="outputSection(`canvas`)">[ re-run tests ]</button></div>
         <div>getContext</div></div></td>
-      <td class="getContext"></td>
+      <td class="getContext" id="cnv1"></td>
     </tr>
-    <tr><td>toDataURL</td><td class="toDataURL"></td></tr>
-    <tr><td>toBlob</td><td class="toBlob"></td></tr>
-    <tr><td>mozGetAsFile</td><td class="mozGetAsFile"></td></tr>
-    <tr><td>getImageData</td><td class="getImageData"></td></tr>
-    <tr><td>winding</td><td class="winding"></td></tr>
-    <tr><td>isPointInPath</td><td class="isPointInPath"></td></tr>
-    <tr><td>isPointInStroke</td><td class="isPointInStroke"></td></tr>
-    <tr><td>fillText</td><td class="fillText"></td></tr>
-    <tr><td>strokeText</td><td class="strokeText"></td></tr>
-    <tr><td>[webgl] readPixels</td><td class="readPixels"></td></tr>
+    <tr><td>toDataURL</td><td class="toDataURL" id="cnv2"></td></tr>
+    <tr><td>toBlob</td><td class="toBlob" id="cnv3"></td></tr>
+    <tr><td>mozGetAsFile</td><td class="mozGetAsFile" id="cnv4"></td></tr>
+    <tr><td>getImageData</td><td class="getImageData" id="cnv5"></td></tr>
+    <tr><td>winding</td><td class="winding" id="cnv6"></td></tr>
+    <tr><td>isPointInPath</td><td class="isPointInPath" id="cnv7"></td></tr>
+    <tr><td>isPointInStroke</td><td class="isPointInStroke" id="cnv8"></td></tr>
+    <tr><td>fillText</td><td class="fillText" id="cnv9"></td></tr>
+    <tr><td>strokeText</td><td class="strokeText" id="cnv10"></td></tr>
+    <tr><td>[webgl] readPixels</td><td class="readPixels" id="cnv11"></td></tr>
     <tr><td colspan="2"><span class="no_color">canvas code courtesy of </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner">kkapsner</a><span class="no_color"> and </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
