--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -327,11 +327,9 @@
     <tr><td><div>
         <div class="btn-left"><button class="btn7" onClick="outputSection(`devices`)">[ re-run tests ]</button>
         &nbsp <div class="tooltip"><span class="icon">[ i ]</span>
-        <span class="tooltiptext">if toggling prefs, most<br>of these require a<br>a page refresh (<b>F5</b>)</span></div>
-        </div>
-        <div>[navigator] hardwareConcurrency</div></div></td>
-      <td id="nHardwareConcurrency"></td>
-    </tr>
+        <span class="tooltiptextbig">be aware that some prefs <b>may</b>
+          <br>require a page refresh (<b>F5</b>)</br>or even a new browser session</span></div></div>
+        <div>[navigator] hardwareConcurrency</div></div></td><td id="nHardwareConcurrency"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">[ i ]</span>
       <span class="tooltiptext">dom.gamepad.enabled</span></div>
       &nbsp [api] gamepad</td><td id="nGetGamepads"></td></tr>
@@ -507,33 +505,6 @@
     <tr><td>getChannelData</td><td id="audioGet"></td></tr>
     <tr><td>copyFromChannel</td><td id="audioCopy"></td></tr>
     <tr><td>sum</td><td id="audioSum"></td></tr>
-    <!--<tr><td colspan="2" class="showhide">
-        <input id="collapseA" class="toggle" type="checkbox" checked onchange="toggleitems(this, `A`)">
-        <label for="collapseA" class="lbl-toggle" id="labelA">&#9660; show details</label>
-    </td></tr>
-    <tr class="togA"><td>audio.pxi_output</td><td id="audio.pxi_output"></td></tr>
-    <tr class="togA"><td>audio.cc_output</td><td id="audio.cc_output"></td></tr>
-    <tr class="togA"><td>audio.hybrid_output</td><td id="audio.hybrid_output"></td></tr>
-    <tr class="togA"><td>audio.pxi_full_buffer_hash</td><td id="audio.pxi_full_buffer_hash"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-sampleRate</td><td id="audio.nt_vc_output.ac-sampleRate"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-state</td><td id="audio.nt_vc_output.ac-state"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-maxChannelCount</td><td id="audio.nt_vc_output.ac-maxChannelCount"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-numberOfInputs</td><td id="audio.nt_vc_output.ac-numberOfInputs"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-numberOfOutputs</td><td id="audio.nt_vc_output.ac-numberOfOutputs"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-channelCount</td><td id="audio.nt_vc_output.ac-channelCount"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-channelCountMode</td><td id="audio.nt_vc_output.ac-channelCountMode"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.ac-channelInterpretation</td><td id="audio.nt_vc_output.ac-channelInterpretation"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-fftSize</td><td id="audio.nt_vc_output.an-fftSize"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-frequencyBinCount</td><td id="audio.nt_vc_output.an-frequencyBinCount"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-minDecibels</td><td id="audio.nt_vc_output.an-minDecibels"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-maxDecibels</td><td id="audio.nt_vc_output.an-maxDecibels"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-smoothingTimeConstant</td><td id="audio.nt_vc_output.an-smoothingTimeConstant"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-numberOfInputs</td><td id="audio.nt_vc_output.an-numberOfInputs"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-numberOfOutputs</td><td id="audio.nt_vc_output.an-numberOfOutputs"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-channelCount</td><td id="audio.nt_vc_output.an-channelCount"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-channelCountMode</td><td id="audio.nt_vc_output.an-channelCountMode"></td></tr>
-    <tr class="togA"><td>audio.nt_vc_output.an-channelInterpretation</td><td id="audio.nt_vc_output.an-channelInterpretation"></td></tr>
-    <tr class="togA"><td colspan="2"></td></tr>-->
     <tr><td colspan="2"><span class="no_color">audio code courtesy of </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner">kkapsner</a><span class="no_color"> and </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
@@ -622,15 +593,20 @@
         <div class="nav-up"><a href="#spare2">&#9650;</a></div>
         <div class="nav-down"><a href="#theend">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td>[navigator] clipboard</td><td id="nClipboard"></td></tr>
+    <tr><td><div>
+        <div class="btn-left"><button class="btn18" onClick="outputSection(`misc`)">[ re-run tests ]</button>
+        &nbsp <div class="tooltip"><span class="icon">[ i ]</span>
+        <span class="tooltiptextbig">be aware that some prefs <b>may</b>
+          <br>require a page refresh (<b>F5</b>)</br>or even a new browser session</span></div></div>
+        <div>[navigator] clipboard</div></div></td><td id="nClipboard"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">[ i ]</span>
       <span class="tooltiptextbig">dom.IntersectionObserver.enabled</span></div>
       &nbsp [api] intersection observer</td><td id="intObserver"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">[ i ]</span>
       <span class="tooltiptext">mathml.disabled</span></div>
-      &nbsp mathml</td><td id="mathml1"></td>
+      &nbsp mathml</td><td id="mathml"></td>
     </tr>
-    <tr><td>[test example] mathml</td><td id="mathml2">
+    <tr><td>[test example] mathml</td><td id="mathmltest">
         <math>
         <mrow><mi>x</mi><mo>=</mo><mfrac><mrow><mo form="prefix">&minus;</mo><mi>b</mi>
         <mo>&PlusMinus;</mo><msqrt><msup><mi>b</mi><mn>2</mn></msup><mo>&minus;</mo><mn>4</mn>
