--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -458,9 +458,8 @@
         <div class="nav-down"><a href="#audio">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td colspan="9" class="intro"><span class="no_color">The real world strikes a balance between efficiency vs
-      entropy [ <a target="_blank" class="blue" href="https://valve.github.io/fingerprintjs2/">fingerprintjs2</a> checks 64
-      fonts by default], but these tests are designed to be comprehensive, not small and fast. As such, they are not automatically run.
-      May be unsuitable on Android [e.g. limted fonts to detect, slow script prompts].</span>
+      entropy [<a target="_blank" class="blue" href="https://valve.github.io/fingerprintjs2/">fingerprintjs2</a> checks 64 fonts by
+      default], but these tests are designed to be comprehensive, not small and fast. As such, they are not automatically run.</span>
     </td></tr>
     <tr><td colspan="4"><div>
         <div class="btn-left"><button class="btn10" id="fontRun" onClick="outputSection(`fonts`)">[ run tests ]</button></div>
