--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -95,11 +95,9 @@
         <div class="nav-down"><a href="#math">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td colspan="2" class="intro"><span class="no_color">
-      <code>Browser</code>, <code>version</code> and <code>os</code> tests are to show how trivial it is to detect that
-      you are using Firefox, the version and your os. However, some have real entropy, such as the math hashes used or
-      the pixel values per zoom setting, and returning the <code>browser/os</code> here is just for fun. <code>Firefox</code>
-      includes the <code>Tor Browser</code>. Detecting <code>Tor Browser</code> as a subset is a bonus: there are other
-      ways to detect <code>Tor</code>. Each test is independent of the others.</span>
+      <code>Browser</code>, <code>version</code> and <code>os</code> tests are to show how trivial it is to detect Firefox/Tor
+      Browser, the version and your os. However, some have real entropy, such as math hashes or pixel values.
+      Returning the <code>browser/os</code> here is just for fun. Each test is independent of the others.</span>
     </td></tr>
     <tr><td>[header] http_user_agent</td><td></td></tr>
     <tr><td>[navigator] userAgent</td><td id="nUserAgent"></td></tr>
