--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -37,13 +37,13 @@
     </th></tr></thead>
     <tr><td>screen resolution</td><td id="ScrRes"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">[ i ]</span>
-      <span class="tooltiptextbig">real time update when spoofing<br>inner window: range 500-3000</span></div>
+      <span class="tooltiptextbig">real time update when spoofing<br>inner window: range 500-2560</span></div>
       &nbsp [css] screen resolution <sup>1</sup></td><td id="S"></td></tr>
     <tr><td>available resolution</td><td id="ScrAvail"></td></tr>
     <tr><td>outer window</td><td id="WndOut"></td></tr>
     <tr><td>inner window</td><td id="WndIn"></td></tr>
     <tr><td><div class="tooltip"><span class="icon">[ i ]</span>
-      <span class="tooltiptext">real time update:<br>range 500-3000</span></div>
+      <span class="tooltiptext">real time update:<br>range 500-2560</span></div>
       &nbsp [css] inner window <sup>1, 2</sup></td><td id="D"></td></tr>
     <tr><td>viewport <sup>3</sup></td><td id="Viewport"></td></tr>
     <tr><td>full screen</td><td id="fsState"></td></tr>
@@ -310,8 +310,6 @@
     <tr><td>[properties] storage manager</td><td id="storageMProp"></td></tr>
     <tr><td>[test] storage manager</td><td id="storageMTest"></td></tr>
     <tr><td>[permission] persistent storage</td><td id="pPersistentStorage"></td></tr>
-    <tr><td>storage access</td><td id="storageASupport"></td></tr>
-    <tr><td>[test] storage access</td><td id="storageATest"></td></tr>
   </table>
 
   <!-- TABLE 7: Devices & Hardware - devices.js -->
@@ -632,11 +630,12 @@
   <script src="js/devices.js"></script>
   <script src="js/canvas.js"></script>
   <script src="js/domrect.js"></script>
-  <script src="js/fonts.js"></script>
   <script src="js/audio.js"></script>
   <script src="js/media.js"></script>
   <script src="js/css.js"></script>
   <script src="js/misc.js"></script>
+  <!-- not autorun-->
+  <script src="js/fonts.js"></script>
 
 </body>
 </html>
