--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -15,7 +15,8 @@
 	<tr><td><h3>TZP is only designed for Firefox and the Tor Browser, and only expected to work in 60 or higher.
 		If you want to know more, find bugs, or wish to contribute, come and visit us at <a target="_blank"
 		class="blue" href="https://github.com/ghacksuserjs/TorZillaPrint">github</a>. Additonal tests can be
-		found on <a class="blue" href="extra.html">this</a> extras page.</h3>
+		found on <a class="blue" href="extra.html">this</a> extras page.</h3><h3>When re-testing sections, be aware
+		that some prefs may require a page refresh (<b>F5</b>) or even a new browser session</h3>
 	</td></tr>
 	</table>
 
@@ -334,10 +335,7 @@
 				<div class="nav-down"><a href="#canvas">&#9660;</a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
-				<div class="btn-left"><button class="btn7" onClick="outputSection(`devices`)">[ re-run tests ]</button>
-				&nbsp <div class="tooltip"><span class="icon">[ i ]</span>
-				<span class="tooltiptextbig">be aware that some prefs <b>may</b>
-					<br>require a page refresh (<b>F5</b>)</br>or even a new browser session</span></div></div>
+				<div class="btn-left"><button class="btn7" onClick="outputSection(`devices`)">[ re-run tests ]</button></div>
 				<div>[navigator] hardwareConcurrency</div></div></td><td id="nHardwareConcurrency"></td></tr>
 		<tr><td><div class="tooltip"><span class="icon">[ i ]</span>
 			<span class="tooltiptext">dom.gamepad.enabled</span></div>
@@ -607,10 +605,7 @@
 				<div class="nav-down"><a href="#theend">&#9660;</a></div></div>
 		</th></tr></thead>
 		<tr><td><div>
-				<div class="btn-left"><button class="btn18" onClick="outputSection(`misc`)">[ re-run tests ]</button>
-				&nbsp <div class="tooltip"><span class="icon">[ i ]</span>
-				<span class="tooltiptextbig">be aware that some prefs <b>may</b>
-					<br>require a page refresh (<b>F5</b>)</br>or even a new browser session</span></div></div>
+				<div class="btn-left"><button class="btn18" onClick="outputSection(`misc`)">[ re-run tests ]</button></div>
 				<div>[navigator] clipboard</div></div></td><td id="nClipboard"></td></tr>
 		<tr><td><div class="tooltip"><span class="icon">[ i ]</span>
 			<span class="tooltiptextbig">dom.IntersectionObserver.enabled</span></div>
