--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -131,12 +131,9 @@
 		<tr><td>[math] os</td><td id="fdMathOS"></td></tr>
 		<tr><td><div class="tooltip"><span class="icon">[ i ]</span>
 			<span class="tooltiptextbig">Linux, Mac or Windows</div> &nbsp [css] os <sup>1</sup></td>
-			<td>
-				<span id="fdCssOSL" style="font-family: Arimo, DejaVu Serif, Adobe Blank Not Linux;">Linux</span>
-				<span id="fdCssOSM" style="font-family: Lucida Grande, Adobe Blank Not Mac;">Mac</span>
-				<span id="fdCssOSW" style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span>
-			</td>
-		</tr>
+			<td><span id="fdCssOSL" style="font-family: Arimo, DejaVu Serif, ABR;">Linux</span>
+					<span id="fdCssOSM" style="font-family: Lucida Grande, ABR;">Mac</span>
+					<span id="fdCssOSW" style="font-family: Segoe UI, ABR;">Windows</span></td></tr>
 		<tr><td><div class="tooltip"><span class="icon">[ i ]</span>
 			<span class="tooltiptextbig">based on <b>[css] os</b> above</span></div>
 			&nbsp [font] os <sup>1</sup></td><td id="fontOS"></td></tr>
@@ -630,7 +627,6 @@
 
 	<br><a name="theend"><br>
 
-	<link rel="stylesheet" type="text/css" href="css/tor_font.css">
 	<link rel="stylesheet" type="text/css" href="css/window_size.css">
 	<link rel="stylesheet" type="text/css" href="css/screen_size.css">
 	<link rel="stylesheet" type="text/css" href="css/dpi.css">
