--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -12,11 +12,10 @@
 <body>
 	<table>
 	<tr><td><a anchor="top"></a><h2>TorZillaPrint</h2></td></tr>
-	<tr><td><h3>TZP is only designed for Firefox and the Tor Browser, and only expected to work in 60 or higher.
-		If you want to know more, find bugs, or wish to contribute, come and visit us at <a target="_blank"
-		class="blue" href="https://github.com/ghacksuserjs/TorZillaPrint">github</a>. Additonal tests can be
-		found on <a class="blue" href="extra.html">this</a> extras page.</h3><h3>When re-testing sections, be aware
-		that some prefs may require a page refresh (<b>F5</b>) or even a new browser session</h3>
+	<tr><td><h3>TZP is only designed for Firefox and the Tor Browser, version 60 or higher.
+	<a class="blue" href="extra.html">Here</a> are additonal tests, and <a target="_blank" class="blue"
+	href="https://github.com/ghacksuserjs/TorZillaPrint">here</a> is the repo.</h3><h3>If re-testing
+	sections, be aware that some prefs may require a page refresh (<b>F5</b>) or even a new browser session</h3>
 	</td></tr>
 	</table>
 
