--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -12,10 +12,10 @@
 <body>
 	<table>
 	<tr><td><a anchor="top"></a><h2>TorZillaPrint</h2></td></tr>
-	<tr><td><h3>TZP is only designed for Firefox and the Tor Browser, version 60 or higher.
+	<tr><td><h3>TZP is only designed for Firefox [v60+] and the Tor Browser [v8+].
 	<a class="blue" href="extra.html">Here</a> are additonal tests, and <a target="_blank" class="blue"
-	href="https://github.com/ghacksuserjs/TorZillaPrint">here</a> is the repo.</h3><h3>If re-testing
-	sections, be aware that some prefs may require a page refresh (<b>F5</b>) or even a new browser session</h3>
+	href="https://github.com/ghacksuserjs/TorZillaPrint">here</a> is the repo [feel free to drop in]. When re-testing
+	sections, be aware that some prefs/option changes may require a page refresh [<b>F5</b>] or even a new browser session.</h3>
 	</td></tr>
 	</table>
 
