--- a/iframes/domrect.html
+++ b/iframes/domrect.html
@@ -39,17 +39,17 @@
 <body>
 <div id="insideDOMRect">
 	<h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
-	<span id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br />
+	<span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br />
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<span id="rect2" class="testRect">F i n g e r p r i n t i n g ?</span>
+	<span class="testRect" id="rect2">F i n g e r p r i n t i n g ?</span>
 </div>
-<select id="rect3" class="testRect">
+<select class="testRect" id="rect3">
 	<option>&minus;&#1726;-</option>
 </select>
-<progress id="rect4" class="testRect">test</progress>
-<button id="rect5" class="testRect"></button>
+<progress class="testRect" id="rect4">test</progress>
+<button class="testRect" id="rect5"></button>
 </body>
 </html>
