--- a/iframes/domrect.html
+++ b/iframes/domrect.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+<!DOCTYPE html>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <head>
 <style>
 #insideDOMRect{
@@ -32,22 +30,22 @@
 	padding: 4.937px;
 	margin: 9.876px;
 }
-.testRect {	outline: 2px dotted lightblue; }
+.testRect { outline: 2px dotted lightblue; }
 </style>
 </head>
 
 <body>
 <div id="insideDOMRect">
-	<h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
-	<span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<span class="testRect" id="rect2">F i n g e r p r i n t i n g ?</span>
+<h1 class="testRect" id="rect0">https://browserleaks.com<i>/rects</i></h1>
+<span class="testRect" id="rect1"><strong>Element.getClientRects (̿▀̿&thinsp;̿Ĺ̯̿̿▀̿ ̿)̄ </strong></span><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<span class="testRect" id="rect2">F i n g e r p r i n t i n g ?</span>
 </div>
 <select class="testRect" id="rect3">
-	<option>&minus;&#1726;-</option>
+<option>&minus;&#1726;-</option>
 </select>
 <progress class="testRect" id="rect4">test</progress>
 <button class="testRect" id="rect5"></button>
