--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -63,6 +63,7 @@
 			&nbsp new window</td><td id="newWinLeak"></td></tr>
 		<tr><td>private window</td><td id="IsPBMode"></td></tr>
 		<tr><td>orientation</td><td id="ScrOrient"></td></tr>
+		<tr><td>[css] orientation</td><td id="cssOrient"></td></tr>
 		<tr><td>[matchMedia] window orientation</td><td id="mmOrient"></td></tr>
 		<tr><td>[inner width vs inner height] window orientation</td><td id="mathOrient"></td></tr>
 		<tr><td>pixel depth</td><td id="PixDepth"></td></tr>
