--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -64,12 +64,14 @@
 		<tr><td>private window</td><td id="IsPBMode"></td></tr>
 		<tr><td>orientation</td><td id="ScrOrient"></td></tr>
 		<tr><td>[css] orientation</td><td id="cssOrient"></td></tr>
+		<tr><td>[css aspect-ratio] orientation</td><td id="cssAS"></td></tr>
+		<tr><td>[css device-aspect-ratio] orientation</td><td id="cssDAS"></td></tr>
 		<tr><td>[matchMedia] window orientation</td><td id="mmOrient"></td></tr>
 		<tr><td>[inner width vs inner height] window orientation</td><td id="mathOrient"></td></tr>
 		<tr><td>pixel depth</td><td id="PixDepth"></td></tr>
 		<tr><td>color depth</td><td id="ColDepth"></td></tr>
 		<tr><td>dpi</td><td id="jsDPI"></td ></tr>
-		<tr><td>[css] dpi</td><td id="P"></td></tr>
+		<tr><td>[css resolution] dpi</td><td id="P"></td></tr>
 		<tr><td>[matchMedia] dpi</td><td id="mmDPI"></td></tr>
 		<tr><td>zoom %</td><td id="jsZoom"></td></tr>
 		<tr><td>devicePixelRatio</td><td id="DevPR"></td></tr>
