--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -49,6 +49,7 @@
 			<span class="ttxt">real time update:<br>range 500-2560</span></div>
 			&nbsp [css] inner window <sup>1, 2</sup></td><td id="D"></td></tr>
 		<tr><td>viewport <sup>3</sup></td><td id="Viewport"></td></tr>
+		<tr><td>[css] display-mode</td><td id="cssDM"></td></tr>
 		<tr><td>full screen</td><td id="fsState"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">full-screen-api.enabled</span></div>
@@ -70,6 +71,7 @@
 		<tr><td>[inner width vs inner height] window orientation</td><td id="mathOrient"></td></tr>
 		<tr><td>pixel depth</td><td id="PixDepth"></td></tr>
 		<tr><td>color depth</td><td id="ColDepth"></td></tr>
+		<tr><td>[css color] bits per color</td><td id="cssBPC"></td></tr>
 		<tr><td>dpi</td><td id="jsDPI"></td ></tr>
 		<tr><td>[css resolution] dpi</td><td id="P"></td></tr>
 		<tr><td>[matchMedia] dpi</td><td id="mmDPI"></td></tr>
