--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -345,6 +345,8 @@
 		<tr><td><div>
 				<div class="btn-left"><button class="btn7" onClick="outputSection(`devices`)">[ re-run tests ]</button></div>
 				<div>[navigator] hardwareConcurrency</div></div></td><td id="nHardwareConcurrency"></td></tr>
+		<tr><td>[css] hover</td><td id="cssH"></td></tr>
+		<tr><td>[css] any-hover</td><td id="cssAH"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxt">dom.gamepad.enabled</span></div>
 			&nbsp [api] gamepad</td><td id="nGetGamepads"></td></tr>
@@ -353,6 +355,8 @@
 			&nbsp mediaDevices</td><td id="nMediaDevices"></td></tr>
 		<tr><td>enumerateDevices</td><td id="eMediaDevices"></td></tr>
 		<tr><td>[navigator] maxTouchPoints</td><td id="nMaxTouchPoints"></td></tr>
+		<tr><td>[css] pointer</td><td id="cssP"></td></tr>
+		<tr><td>[css] any-pointer</td><td id="cssAP"></td></tr>
 		<tr><td><div class="ttip"><span class="icon">[ i ]</span>
 			<span class="ttxtb">media.webspeech.synth.enabled</span></div>
 			&nbsp speech synthesis</td><td id="speechSynth"></td></tr>
