--- a/extra.html
+++ b/extra.html
@@ -12,7 +12,7 @@
 <body>
   <table>
   <tr><td><a anchor="top"><h2>TorZillaPrint: Additional Tests</h2></td></tr>
-  <tr><td><h3><a class="blue" href="TorZillaPrint.html">return to the main test</a></td></tr>
+  <tr><td class="blurb"><a class="blue" href="TorZillaPrint.html">return to the main test</a></td></tr>
   </table>
 
   <table id="tb2">
